fix for python 3.7 and lib versions in requirements.txt

--- a/Neural_Network_Write_Up_final.ipynb
+++ b/Neural_Network_Write_Up_final.ipynb
@@ -131,7 +131,7 @@
     "    with tf.name_scope(\"Train\"):\n",
     "        optimizer = tf.train.AdamOptimizer(learning_rate).minimize(loss)\n",
     "    \n",
-    "    tf.scalar_summary(\"loss\", loss)\n",
+    "    tf.summary.scalar(\"loss\", loss)\n",
     "    \n",
     "    # Predictions for the training, validation, and test data.\n",
     "    train_prediction = yhat\n",
@@ -185,7 +185,7 @@
     "num_epochs = 3001\n",
     "def run_session(num_epochs, name):\n",
     "    with tf.Session(graph=graph) as session:\n",
-    "        writer = tf.train.SummaryWriter(\"logs/\", session.graph)\n",
+    "        writer = tf.summary.FileWriter(\"logs/\", session.graph)\n",
     "        tf.initialize_all_variables().run()\n",
     "        print(\"Initialized\")\n",
     "        for epoch in range(num_epochs):\n",
@@ -277,9 +277,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
